Fix spacing below cards on desktop

--- a/__sass/main.scss
+++ b/__sass/main.scss
@@ -145,7 +145,7 @@ footer .social-links {
 }
 
 // Cards
-.card {
+.card-deck .card {
   margin-bottom: 1rem;
 }
 
